--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
 }
 
 .review-detail__abstract {
-  @apply text-lg md:text-xl my-10 mx-4 text-gray-200;
+  @apply text-lg md:text-[26px] mt-20 mb-10 text-gray-200 md:leading-10 max-w-[55ch];
 }
 
 body {
@@ -13,12 +13,15 @@ body {
 }
 
 .contents p {
-  @apply md:text-lg my-4;
+  @apply md:text-lg my-8;
 }
 
-.detail__abstract,
+.contents hr {
+  @apply border-gray-500;
+}
+
 .contents {
-  @apply leading-8 mx-4;
+  @apply leading-8 max-w-[70ch];
   font-family: Tiempos, Georgia, serif;
 }
 
