--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@
   @apply text-lg md:text-[26px] mt-20 mb-10 text-gray-200 md:leading-10 max-w-[55ch];
 }
 
+.product-name,
 body {
   font-family: Walfork, Walsheim, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
