add track list and improve a11y

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,3 +168,31 @@ body {
     stroke-dashoffset: 27;
   }
 }
+
+.collapsible[data-state="open"] {
+  animation: open-collapsible 250ms ease-out;
+}
+
+.collapsible[data-state="closed"] {
+  animation: close-collapsible 250ms ease-out;
+}
+
+@keyframes open-collapsible {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: var(--radix-collapsible-content-height);
+  }
+}
+
+@keyframes close-collapsible {
+  from {
+    height: var(--radix-collapsible-content-height);
+  }
+
+  to {
+    height: 0;
+  }
+}
