--- a/styles/global.css
+++ b/styles/global.css
@@ -48,19 +48,27 @@ body {
 }
 
 .body__inner-container p {
-  @apply my-6 text-lg;
+  @apply my-6 md:text-lg;
 }
 
 .body__inner-container > p:first-child:first-letter,
 .contents > p:first-child:first-letter {
   float: left;
-  font-size: 6.2em;
-  line-height: 1em;
-  margin: -0em 0.15em -0.13em 0;
+  /* font-size: 6.2em;
+  line-height: 1em; */
+  margin: 0 0.15em 0 0;
+  @apply text-6xl md:text-8xl;
+}
+
+@media (min-width: 768px) {
+  .body__inner-container > p:first-child:first-letter,
+  .contents > p:first-child:first-letter {
+    margin: -0.05em 0.15em 0.02em 0;
+  }
 }
 
 .review-blurb {
-  @apply text-2xl my-10;
+  @apply text-lg md:text-2xl my-10;
 }
 
 .contents a {
